tests/baselines/reference/comparisonOperatorWithNumericLiteral.errors.txt
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNumericLiteral.ts(5,1): error TS2365: Operator '>' cannot be applied to types 'BrandedNum' and '0'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNumericLiteral.ts(10,1): error TS2365: Operator '<' cannot be applied to types 'BrandedNum' and '0'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNumericLiteral.ts(15,1): error TS2365: Operator '>=' cannot be applied to types 'BrandedNum' and '0'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNumericLiteral.ts(20,1): error TS2365: Operator '<=' cannot be applied to types 'BrandedNum' and '0'.


==== tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNumericLiteral.ts (4 errors) ====
    type BrandedNum = number & { __numberBrand: any };
    var x : BrandedNum;
    
    // operator >
    x > 0;
    ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'BrandedNum' and '0'.
    x > <number>0;
    x > <BrandedNum>0;
    
    // operator <
    x < 0;
    ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'BrandedNum' and '0'.
    x < <number>0;
    x < <BrandedNum>0;
    
    // operator >=
    x >= 0;
    ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'BrandedNum' and '0'.
    x >= <number>0;
    x >= <BrandedNum>0;
    
    // operator <=
    x <= 0;
    ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'BrandedNum' and '0'.
    x <= <number>0;
    x <= <BrandedNum>0;
    
    // operator ==
    x == 0;
    x == <number>0;
    x == <BrandedNum>0;
    
    // operator !=
    x != 0;
    x != <number>0;
    x != <BrandedNum>0;
    
    // operator ===
    x === 0;
    x === <number>0;
    x === <BrandedNum>0;
    
    // operator !==
    x !== 0;
    x !== <number>0;
    x !== <BrandedNum>0;
    